<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/menu_container"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/menu_background"
        app:srcCompat="?attr/bk_shadow_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/app_name"
        android:textColor="?attr/bk_textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5">


        <LinearLayout
            android:id="@+id/menu_home_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/home"
                android:textColor="?attr/bk_textColor"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                app:srcCompat="@drawable/ic_house"
                app:tint="?attr/bk_textColor" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/menu_favor_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center_vertical|end"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/favor"
                android:textColor="?attr/bk_textColor"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                app:srcCompat="@drawable/ic_favor"
                app:tint="?attr/bk_textColor" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/menu_setting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center_vertical|end"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/settings"
                android:textColor="?attr/bk_textColor"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                app:srcCompat="@drawable/ic_setting"
                app:tint="?attr/bk_textColor" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/menu_about_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center_vertical|end"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/about"
                android:textColor="?attr/bk_textColor"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                app:srcCompat="@drawable/ic_about"
                app:tint="?attr/bk_textColor" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/menu_exit_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="19dp"
        android:alpha="0.7"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.5">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/exit"
            android:textColor="?attr/bk_textColor"
            android:textSize="17sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            app:srcCompat="@drawable/ic_exit"
            app:tint="?attr/bk_textColor" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>